# NA-templates

./: CMakeLists.txt
10-algos/: implementation.cpp  implementation.h
20-type-template/: implementation.h
30-traits/: implementation.h
40-algos-impl/: 43-vector-erase.cpp  find_if.h  inner_product.h  vector_erase.h
50-sfinae/: implementation-void_t.h  implementation.h
60-stm/: stm.h
70-notes/: 73-voiderFoo.cpp  74-voiderMember.cpp  75-typeDisjunction.cpp  76-typeDeduction.cpp  77-find_if.cpp  78-innerProd.cpp  79-erase-remove.cpp  CMakeLists.txt  notes.h
